--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SYNAPSO - Polo Cuidare</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
   <header>
@@ -56,6 +58,14 @@
         <button id="btn-favoritar">⭐ Favoritar</button>
         <button id="btn-comentar">💬 Comentar</button>
     </div>
+
+    <div class="compartilhar">
+         <p>Compartilhar:</p>
+         <a id="compartilhar-facebook" target="_blank"><i class="fab fa-facebook"></i></a>
+         <a id="compartilhar-twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+         <a id="compartilhar-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    </div>
+
 
     <div id="comentarios">
         <h3>Comentários</h3>
