--- a/public/detalhes_noticia.html
+++ b/public/detalhes_noticia.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SYNAPSO - Polo Cuidare</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
 </head>
 <body>
   <header>
@@ -24,7 +23,8 @@
     <section class="noticia">
       <h1>Polo Cuidare Neurodivergente é inaugurado em Piau</h1>
       <p class="fonte">Fonte e fotos: Prefeitura de Piau</p>
-      <img src="img1.jpg" alt="Inauguração do polo">
+      
+      <img src="assets/images/img1.jpg" alt="Inauguração do polo">
     </section>
 
     <section class="conteudo">
@@ -41,9 +41,9 @@
       </p>
 
       <div class="galeria">
-        <img src="img2.jpg" alt="Palestra">
-        <img src="img3.jpg" alt="Participantes">
-        <img src="img4.jpg" alt="Evento">
+        <img src="assets/images/img2.jpg" alt="Palestra">
+        <img src="assets/images/img3.jpg" alt="Participantes">
+        <img src="assets/images/img4.jpg" alt="Evento">
       </div>
     </section>
 
@@ -55,31 +55,29 @@
     </section>
 
     <div class="interacoes">
-        <button id="btn-favoritar">⭐ Favoritar</button>
-        <button id="btn-comentar">💬 Comentar</button>
+      <button id="btn-favoritar">⭐ Favoritar</button>
+      <button id="btn-comentar">💬 Comentar</button>
     </div>
 
     <div class="compartilhar">
-         <p>Compartilhar:</p>
-         <a id="compartilhar-facebook" target="_blank"><i class="fab fa-facebook"></i></a>
-         <a id="compartilhar-twitter" target="_blank"><i class="fab fa-twitter"></i></a>
-         <a id="compartilhar-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <p>Compartilhar:</p>
+      <a id="compartilhar-facebook" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a id="compartilhar-twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a id="compartilhar-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
     </div>
-
 
     <div id="comentarios">
-        <h3>Comentários</h3>
-        <textarea id="comentario-input" placeholder="Escreva seu comentário..."></textarea>
-        <button id="enviar-comentario">Enviar</button>
-        <ul id="lista-comentarios"></ul>
+      <h3>Comentários</h3>
+      <textarea id="comentario-input" placeholder="Escreva seu comentário..."></textarea>
+      <button id="enviar-comentario">Enviar</button>
+      <ul id="lista-comentarios"></ul>
     </div>
-
 
     <section class="rodape">
       <p>Projeto SYNAPSO</p>
     </section>
   </main>
 
-  <script src="script.js"></script>
+  <script src="assets/js/app.js"></script>
 </body>
 </html>
