--- a/codigo/public/detalhes_noticia.html
+++ b/codigo/public/detalhes_noticia.html
@@ -20,6 +20,12 @@
   </header>
 
   <main>
+    <div class="mb-4">
+      <button class="btn btn-sm btn-secondary me-2" onclick="ajustarFonte('+')">A+</button>
+      <button class="btn btn-sm btn-secondary me-2" onclick="ajustarFonte('-')">A-</button>
+      <button class="btn btn-sm btn-dark me-2" onclick="alternarModo()">Alternar Tema</button>
+      
+    </div>
     <section class="noticia">
       <h1>Polo Cuidare Neurodivergente é inaugurado em Piau</h1>
       <p class="fonte">Fonte e fotos: Prefeitura de Piau</p>
@@ -64,6 +70,7 @@
       <a id="compartilhar-facebook" target="_blank"><i class="fab fa-facebook"></i></a>
       <a id="compartilhar-twitter" target="_blank"><i class="fab fa-twitter"></i></a>
       <a id="compartilhar-whatsapp" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <button class="btn btn-sm btn-info me-2" onclick="copiarLink()">Copiar Link</button>
     </div>
 
     <div id="comentarios">
